# tgfp-bot

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yaml
scripts/: bot.py  get_standings.py  help.py
